# auto-gmail

./: main.py  persona.md  pyproject.toml
